--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,9 +1,7 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
+    "configurations": [
+        {
             "name": "Python",
             "type": "python",
             "request": "launch",
@@ -44,7 +42,6 @@
             ]
         },
         {
-            "program": "",
             "name": "Python Module",
             "type": "python",
             "request": "launch",
@@ -155,7 +152,6 @@
             ]
         },
         {
-            "program": "",
             "name": "Pyramid",
             "type": "python",
             "request": "launch",
